@@ -221,6 +221,7 @@ Release 0.20.0 - Unreleased
                when rows run to the Billions
    HBASE-1393  Narrow synchronization in HLog
    HBASE-1404  minor edit of regionserver logging messages
+   HBASE-1405  Threads.shutdown has unnecessary branch
 
   OPTIMIZATIONS
 
